--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>TediT</title>
+    <title id="t">TediT</title>
+    <link href="mani.json" rel="manifest" />
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
