--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
+    <input type="file" id="file-selector" accept=".txt,.text,.md,.json,.html,.htm,.js,.css,.mf,.php,.py,.csv,.svg,.xml,.java,.c,.cpp,.h,.hpp,.cs,.replit,.gitignore,.ini,.bat,.cmd,.sh">
     <script src="script.js"></script>
   </body>
 </html>
